feat(CityChart): default mobike rides

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>出行用户画像</title>
+    <script src="http://api.map.baidu.com/api?v=2.0&ak=6c06b1db41bb796af164a6b097a03290"></script>
   </head>
   <body>
     <noscript>
